# production_incident_response_system

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FINAL_COMPLIANCE_REPORT.md  HACKATHON_CHECKLIST.md  README.md  SAMPLE_OUTPUT.txt  advanced_incidents.py  api_server.py  demo.py  example_usage.py  github_contents.json  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  system_simulator.py  tasks.py  test_api.py  test_compliance.py
hf-deployment/: .gitignore  DEPLOYMENT_INSTRUCTIONS.txt  Dockerfile  LICENSE  README.md  __init__.py  api_server.py  app.py  env.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tests/: test_env.py
