[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "production-incident-simulator"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for production incident response"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Senior Distributed Systems Engineer"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "flask>=3.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/20RITVIK06/production_incident_response_system"
Repository = "https://github.com/20RITVIK06/production_incident_response_system"
Documentation = "https://github.com/20RITVIK06/production_incident_response_system/blob/main/README.md"

[tool.setuptools]
py-modules = ["env", "models", "tasks", "system_simulator", "advanced_incidents", "inference", "api_server", "app"]
